// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OnePreset Snapshot 1`] = `
<View
  className="flex items-start"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="overflow-hidden flex grow-0 flex-row items-center gap-2 rounded border px-2.5 py-1.5 font-medium border-f1-border text-f1-foreground"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      className="absolute inset-0"
      pointerEvents="none"
      style={
        [
          {
            "opacity": 0,
          },
          {
            "backgroundColor": "rgba(0, 0, 0, 1)",
          },
        ]
      }
    />
    <Text
      className="whitespace-nowrap text-f1-foreground"
    >
      label
    </Text>
  </View>
</View>
`;

exports[`OnePreset Snapshot with number 1`] = `
<View
  className="flex items-start"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="overflow-hidden flex grow-0 flex-row items-center gap-2 rounded border px-2.5 py-1.5 font-medium pr-1.5 border-f1-border text-f1-foreground"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      className="absolute inset-0"
      pointerEvents="none"
      style={
        [
          {
            "opacity": 0,
          },
          {
            "backgroundColor": "rgba(0, 0, 0, 1)",
          },
        ]
      }
    />
    <Text
      className="whitespace-nowrap text-f1-foreground"
    >
      label
    </Text>
    <View
      className="flex items-start"
    >
      <View
        className="flex items-center justify-center rounded-xs grow-0 px-0.5 min-w-5 h-5 bg-f1-background-secondary border border-f1-border"
      >
        <Text
          className="text-center text-sm font-medium tabular-nums whitespace-nowrap text-f1-foreground"
        >
          42
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`OnePreset renders correctly with selected props 1`] = `
<View
  className="flex items-start"
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    className="overflow-hidden flex grow-0 flex-row items-center gap-2 rounded border px-2.5 py-1.5 font-medium border-f1-border-selected bg-f1-background-selected-secondary text-f1-foreground-selected"
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        undefined,
      ]
    }
  >
    <View
      className="absolute inset-0"
      pointerEvents="none"
      style={
        [
          {
            "opacity": 0,
          },
          {
            "backgroundColor": "rgba(0, 0, 0, 1)",
          },
        ]
      }
    />
    <Text
      className="whitespace-nowrap text-f1-foreground-selected"
    >
      label
    </Text>
  </View>
</View>
`;
